--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@hashgraph/sdk": "^2.18.5"
+    "@hashgraph/sdk": "^2.18.5",
+    "bignumber.js": "^9.1.0"
   }
 }
