--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "The only full decentralized Web3 name service on Hedera Hashgraph.",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "fmt": "prettier --write .",
     "build": "tsc",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "@hashgraph/sdk": "^2.18.5",
+    "axios": "^1.1.3",
     "bignumber.js": "^9.1.0"
   }
 }
