feat: integrate coin gecko to spot price hbar to usd
Signed-off-by: Ryan Leckey <ryan@launchbadge.com>

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@kabuto-sh/ns",
+  "type": "module",
   "version": "0.1.0",
   "description": "The only full decentralized Web3 name service on Hedera Hashgraph.",
   "main": "lib/index.js",
