--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "LaunchBadge <contact@launchbadge.com>",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/long": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
