--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@hashgraph/sdk": "^2.18.5",
     "axios": "^1.1.3",
-    "bignumber.js": "^9.1.0"
+    "bignumber.js": "^9.1.0",
+    "date-fns": "^2.29.3"
   }
 }
