--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
   "scripts": {
     "fmt": "prettier --write .",
     "build": "tsc",
-    "prepare": "run-s build"
+    "prepare": "run-s build",
+    "test": "vitest run --coverage"
   },
   "keywords": [],
   "author": "LaunchBadge <contact@launchbadge.com>",
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/long": "^4.0.0",
+    "@vitest/coverage-c8": "^0.24.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "vitest": "^0.24.3"
   },
   "dependencies": {
     "@hashgraph/sdk": "^2.18.5",
