--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "packageManager": "pnpm@8.6.12",
   "name": "@kabuto-sh/ns",
   "version": "0.10.3",
   "description": "A fully decentralized Web3 name service on Hedera Hashgraph.",
