--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -30,4 +30,4 @@ jobs:
         run: pnpm run typecheck
 
       - name: Check Format
-        run: pnpm run format:check
+        run: pnpm run fmt:check
