--- a/package.json
+++ b/package.json
@@ -13,25 +13,29 @@
     "build": "tsc && node scripts/bundle.js",
     "prepare": "run-s build",
     "test": "vitest run --coverage",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "check": "run-s typecheck fmt:check test"
   },
   "keywords": [],
   "author": "LaunchBadge <contact@launchbadge.com>",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@hashgraph/sdk": "^2.32.0",
     "@types/long": "^4.0.2",
-    "@vitest/coverage-v8": "^0.34.2",
+    "@vitest/coverage-v8": "^0.34.3",
     "esbuild": "^0.19.2",
     "esbuild-node-externals": "^1.8.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.2",
-    "typescript": "^5.1.6",
-    "vitest": "^0.34.2"
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.3"
   },
   "dependencies": {
-    "@hashgraph/sdk": "^2.32.0",
-    "axios": "^1.4.0",
-    "bignumber.js": "^9.1.1",
+    "axios": "^1.5.0",
+    "bignumber.js": "^9.1.2",
     "date-fns": "^2.30.0"
+  },
+  "peerDependencies": {
+    "@hashgraph/sdk": "^2.32.0"
   }
 }
